Learned how to add images to a web page.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Vijay Reddy">
         <meta name="description" content="This web-site is about me.">
         <title>About Me</title>
-        <link rel="icon" href="https://2.bp.blogspot.com/-ngmjXmcrD2k/Uj6AbaKlcOI/AAAAAAAAAaA/fnlfDYl1pQ4/s1600/Image+of+flowers-Red-Abstract-Rose-Hd-Wallpaper-picture-of-flowers.jpg" type="image/x-icon">
+        <link rel="icon" href="img/html5.png" type="image/x-icon">
         <link rel="stylesheet" href="main.css" type="text/css">
 
         <style>
