--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <title>
             My website
         </title>
-        <link rel="icon" href=https://2.bp.blogspot.com/-ngmjXmcrD2k/Uj6AbaKlcOI/AAAAAAAAAaA/fnlfDYl1pQ4/s1600/Image+of+flowers-Red-Abstract-Rose-Hd-Wallpaper-picture-of-flowers.jpg type="image/x-icon"> 
+        <link rel="icon" href="img/html5.png" type="image/x-icon"> 
         <style>
             html {
-                font-size: medium;
+                font-size: 22px;
             }
         </style>
         <link rel="stylesheet" href="main.css" type="text/css">
@@ -21,23 +21,37 @@
         <h1>Hello world!</h1>
         <hr>
         <h2>Welcome to the world of <em>HTLM!</em></h2>
+        <img src="img/html_logo_300x300.png" alt="HTML5 Logo" title="I am learning HTML5" width="300" height="300">
+        <figure>
+            <figcaption>
+                An Example of HTML5 Code:
+            </figcaption>
+            <code>
+                &lt;h1&gt;Hello World!&lt;/h1&gt;
+            </code>
+        </figure>
+
         <ul>
         <li><p>I <strong>love</strong> this world.</p></li>
         <li><p>I learn how to code in HTML from <abbr title="Mozilla Developer Network"><a href="https://developer.mozilla.org">MDN</a></abbr> web page and youtube.</p></li>
         <li><p>I live here:
             <address>&nbsp;4-179,Koutal-B,Sarangapur,Nirmal,Telangana,India.</address>
-        </p>
+            </p>
         </li>
         </ul>
+
         <hr>
+
         <p>Web Developement roadmap:</p>
         <ol>
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
         </ol>
+
         <hr>
-        <h3>Places I want to visit:</h3>
+
+        <h3>Places I'd Like to Avoid:</h3>
         <dl>
             <dt>North Pole</dt>
             <dd>I hear this is <strong>cold</strong>!</dd>
@@ -48,7 +62,38 @@
             <dt>Mountain Tops</dt>
             <dd>These are cold too.</dd>
         </dl>
+
+        <h3>Places I'd Like to Visit:</h3>
+        <ul>
+            <li>
+                <p>I've heard good things about the caribbean.</p>
+                <figure>
+                    <img src="img/caribbean.jpg" alt="Caribbean Beach" title="I want to visit this place." width="400" height="225"
+                    loading="lazy">
+                    <figcaption>
+                        This is an Image of a Caribbean Beach.
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <p>I've heard good things about going here:</p>
+                <address>
+                    Margaritaville Island Reserve Riviera Cancún<br>
+                    Bahia Petempich Puerto Morelos, Mexico<br>
+                    Colonia Morelos, México 77580
+                </address>
+                <figure>
+                    <img src="img/vacation.jpg" alt="Cancun Vacation" title="It's 5 o'Clock Somewhere!" width="400"
+                        height="267" loading="lazy">
+                    <figcaption>
+                        A Caribbean Vacation Image.
+                    </figcaption>
+                </figure>
+            </li>
+        </ul>
+
         <hr>
+
         &lt;&lt;&lt; &copy; <a href="about.html">Vijay Reddy</a> &gt;&gt;&gt;
     </body>
 
