Learned about semantic tags in HTML.

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     </head>
 
     <body>
+        <header>
         <h1>About Me</h1>
         <p>Passionate to work in a professional environment where I would be given a chance to
             implement and enhance my skills to achieve a rewarding position. Ability to constantly
@@ -24,17 +25,19 @@
             Solving skills.</p>
         
         <hr>
-        <nav>
+        <nav aria-label="primary-navigation">
         <ul>
             <li><a href="#education">Education details</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#personal details">Personal details</a></li>
+            <li><a href="#personal-details">Personal details</a></li>
         </ul>
         </nav>
+        </header>
         <hr>
 
+        <main>
         <section id="education">
-            <h1>Education Details:</h1>
+            <h2>Education Details:</h2>
             <p>Will be uploaded soon...<br>
                 Btech:<br>
                 Inter:<br>
@@ -44,7 +47,7 @@
         <hr>
 
         <section id="skills">
-            <h1>Skills:</h1>
+            <h2>Skills:</h2>
             <ul>
                 <li>Java</li>
                 <li>SQL</li>
@@ -63,8 +66,8 @@
         </section>
         <hr>
 
-        <section id="personal details">
-            <h1>Personal Details:</h1>
+        <section id="personal-details">
+            <h2>Personal Details:</h2>
             <ul>  
                 <li>Name: Vijay Reddy</li>
                 <li>Email: vijayreddy.vanga8@gmail.com</li>
@@ -82,12 +85,15 @@
             <li>Dial <a href="tel:+1234567890">my phone number</a>.</li>
             <li>Open <a href="https://www.google.com/" target="_blank">google</a> in a new tab.</li>
         </ul>
+        </main>
         <hr>
 
+        <footer>
         <a href="#">Move to top</a>
         
         <p><a href="/">Back to Home</a></p>
-        <hr>
+
         <p>&lt;&lt;&lt; &copy; <a href="about.html">Vijay Reddy</a> &gt;&gt;&gt;</p>
+        </footer>
     </body>
 </html>
