--- a/about.html
+++ b/about.html
@@ -30,12 +30,14 @@
             <li><a href="#education">Education details</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#personal-details">Personal details</a></li>
+            <li><a href="#contact">Contact Me</a></li>
         </ul>
         </nav>
         </header>
         <hr>
 
         <main>
+        <article>
         <section id="education">
             <h2>Education Details:</h2>
             <p>Will be uploaded soon...<br>
@@ -44,6 +46,7 @@
                 School:<br>
             </p>
         </section>
+        </article>
         <hr>
 
         <section id="skills">
@@ -77,6 +80,115 @@
                 </li>
             </ul>
         </section>
+        <hr>
+
+        <article id="contact">
+                <h2>Contact Me:</h2>
+                <p>I'd really like to hear from you!</p>
+                <form action="https://httpbin.org/get" method="get">
+                    <fieldset>
+                        <legend>Personal Info</legend>
+                    <!--The value of for in lable must be equal to id in input and name will help the server to know about the input better.-->
+                    <!--Only one element can have autofocus.-->
+                    <p>
+                    <label for="firstName">First Name:</label>
+                    <input type="text" name="firstName" id="firstName" placeholder="Vijay" autocomplete="on" required autofocus>
+                    </p>
+                    <p>
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" name="lastName" id="lastName" placeholder="Vanga" autocomplete="on" required>
+                    </p>
+                    <p>
+                    <label for="password">Password:</label>
+                    <input type="password" name="password" id="password" placeholder="Keep It Secret!" required>
+                    </p>
+                    <p>
+                    <label for="phone">Phone:</label>
+                    <input type="tel" name="phone" id="phone" placeholder="1234567890" pattern="[0-9]{10}" required>
+                    </p>
+                    <p>
+                    <label for="decade">Favorite Decade:</label>
+                    <input type="number" name="decade" id="decade" min="1960" max="2020" step="10" value="2000" required>
+                    </p>
+                    <p>
+                        <label for="coffee">Favorite Coffee</label>
+                        <select name="coffee" id="coffee" size="5" multiple>
+                            <optgroup label="Coffees">
+                                <option value="regular coffee">Regular Coffee</option>
+                                <option value="iced coffe">Iced Coffee</option>
+                            </optgroup>
+                            <optgroup label="Espresso Drinks">
+                                <option value="latte">Latte</option>
+                                <option value="cappuccino" selected>Cappuccino</option>
+                                <option value="cortado">Cortado</option>
+                                <option value="americano">Americano</option>
+                            </optgroup>
+                            <option value="other">Other</option>
+                        </select>
+                    </p>
+                    <!-- <p>
+                        <label for="coffe">Favorite Coffee</label>
+                        <input type="text" name="coffe" id="coffe" list="coffe-list">
+                        <datalist id="coffe-list">
+                            <option value="regular coffee">
+                            <option value="iced coffe">
+                            <option value="latte">
+                            <option value="cappuccino">
+                            <option value="cortado">
+                            <option value="americano">
+                            <option value="other">
+                        </datalist>
+                    </p> -->
+                </fieldset>
+                <br>
+                <fieldset>
+                    <legend>What is your favorite food?</legend>
+                    <p>
+                    <input type="radio" name="food" id="tacos" value="tacos">
+                    <label for="tacos">Tacos</label>
+                    </p>
+                    <p>
+                    <input type="radio" name="food" id="pizza" value="pizza">
+                    <label for="pizza">Pizza</label>
+                    </p>
+                    <p>
+                    <input type="radio" name="food" id="other" value="other">
+                    <label for="other">Other</label>
+                    </p>
+                </fieldset>
+                <br>
+                <fieldset>
+                    <legend>Do you have pets?</legend>
+                    <p>
+                        <input type="checkbox" name="pets" id="dog" value="dog">
+                        <label for="dog">Dog</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" name="pets" id="cat" value="cat">
+                        <label for="cat">Cat</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" name="pets" id="fish" value="fish">
+                        <label for="fish">Fish</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" name="pets" id="otherPet" value="otherPet">
+                        <label for="otherpet">Other</label>
+                    </p>
+                </fieldset>
+                <br>
+                <fieldset>
+                    <legend>Send Me A Note</legend>
+                    <label for="message">Your Message:</label>
+                    <br>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Type your message here."></textarea>
+                </fieldset>
+                <br>
+                <button type="submit">Submit</button>
+                <button type="submit" formaction="https://httpbin.org./post" formmethod="post">Post</button>
+                <button type="reset">Reset</button>
+                </form>
+        </article>
         <hr>
 
         <ul>
